# st_handeye_graph

./: .gitignore  CMakeLists.txt  README.md
calibration_data/: 20230920_camera_info.yaml  camera_info.yaml
calibration_data/20230920/: 000.csv  001.csv  002.csv  003.csv  004.csv  005.csv
calibration_data/20231006/: 000.csv  000_joints.txt  001.csv  001_joints.txt  002.csv  002_joints.txt  003.csv  003_joints.txt  004.csv  004_joints.txt  005.csv  005_joints.txt  006.csv  006_joints.txt
calibration_data/calib_a/: 000_pose.csv  001_pose.csv  002_pose.csv  003_pose.csv  004_pose.csv  005_pose.csv  006_pose.csv  008_pose.csv  009_pose.csv  010_pose.csv  011_pose.csv  013_pose.csv  016_pose.csv  017_pose.csv  018_pose.csv  024_pose.csv  035_pose.csv  036_pose.csv  037_pose.csv  038_pose.csv  039_pose.csv  040_pose.csv
calibration_data/calib_b/: 000_pose.csv  001_pose.csv  002_pose.csv  003_pose.csv  004_pose.csv  005_pose.csv  006_pose.csv  007_pose.csv  008_pose.csv  009_pose.csv  010_pose.csv  011_pose.csv  012_pose.csv  013_pose.csv  014_pose.csv  015_pose.csv  016_pose.csv  017_pose.csv  018_pose.csv
include/g2o/: edge_handeye_transform.hpp  edge_projection_pinhole.hpp  edge_projection_xray.hpp  edge_source_transform.hpp  parameter_point_xyz.hpp
include/st_handeye/: st_handeye.hpp
scripts/: CMakeCache.txt  Makefile  calibrate  calibrate_charuco  cmake_install.cmake  evaluation.py  evaluation_xray.py  plot.py  reconst.py  run_calibration.sh  run_calibration_charuco.sh  run_simulation.sh
src/: calibrate.cpp  calibrate_charuco.cpp  handeye_simulation.cpp  handeye_simulation_xray.cpp  st_handeye_graph.cpp  st_handeye_graph_xray.cpp  st_handeye_visp.cpp  test.cpp
